<resources>
    <string name="app_name">homework-lesson2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cinema_desc">movie</string>
    <string name="cinema_info">Когда в Бруклине взлетает на воздух автобус и на улицах Нью-Йорка разворачивается
        кровавый террор, Хаб — Хаббарт, глава Объединенного Антитеррористического Подразделения ФБР получает задание
        задержать террористов и предъявить им обвинение. Элиза Крафт — тайный оперативный агент ЦРУ. Она обладает
        ценными источниками информации в среде американцев арабского происхождения и тесно связана с ними. Хаб и Элиза
        работают вместе, объединившись для совместной борьбы против террористической группы. Но этого оказывается
        недостаточно. Требования общественности обеспечить безопасность граждан вынуждают президента США объявить
        чрезвычайное положение и обратиться за помощью к армии... Когда в Бруклине взлетает на воздух автобус и на
        улицах Нью-Йорка разворачивается кровавый террор, Хаб — Хаббарт, глава Объединенного Антитеррористического
        Подразделения ФБР получает задание задержать террористов и предъявить им обвинение. Элиза Крафт — тайный
        оперативный агент ЦРУ. Она обладает ценными источниками информации в среде американцев арабского происхождения и
        тесно связана с ними. Хаб и Элиза работают вместе, объединившись для совместной борьбы против террористической
        группы. Но этого оказывается недостаточно. Требования общественности обеспечить безопасность граждан вынуждают
        президента США объявить чрезвычайное положение и обратиться за помощью к армии...
    </string>
    <string name="detail_hint">Описание</string>
    <string name="check_box_like_hint">Нравится</string>
    <string name="text_comment_label">Комментарий</string>
    <string name="cinema_about_hint">Описание к фильму</string>
    <string name="request_author_name">Введите имя</string>
    <string name="cinema_name">cinema 1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">OK</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_alert_title">Представтесь</string>
    <string name="default_alert_message">Введите ваше имя</string>
    <string name="action_yes">OK</string>
    <string name="shared_app">Поделиться с друзями</string>
</resources>