<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MovieItem">
    
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    
        <LinearLayout
                android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center"
                      android:padding="6dp">
            
            <ImageView
                    android:id="@+id/cinemaImageView"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/avatar_2"
                    android:contentDescription="@string/cinema_desc"/>
            
            <TextView
                    android:id="@+id/cinemaTitleTextView"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    tools:text="@string/cinema_name"/>
            
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cinemaDetailsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:typeface="sans"
                    android:text="@string/detail_hint"/>
            
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>